<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_r2b_galileo</name>
  <version>3.2.5</version>
  <description>Package to provide the r2b_galileo dataset for testing</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <build_depend>ament_cmake_auto</build_depend>
  <build_depend>isaac_ros_common</build_depend>
</package>
