<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_test_cmake</name>
  <version>3.2.5</version>
  <description>
    cmake integration for Isaac ROS tests.
  </description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>

  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>isaac_ros_common</build_depend>

  <depend>launch_testing_ament_cmake</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_launch_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
